examples/reference_files/invalid/semanticErr/pointers/assignReferenceToInt.wacc
# Tries to assign a reference to an int should return semantic error

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int a = 1;
  int *p = &a;
  *p = &a
end